--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,7 +3,7 @@
  * 
  * Designed by u/kamikazechaser
  *
- * v0.0.1 - 01/12/2020
+ * v0.0.2 - 01/12/2020
  *
  */
 
@@ -123,4 +123,124 @@ body:not(.subscriber) .arrow.downmod {
   margin: 12px;
   left: 75%;
   top: 3%;
+}
+
+/* 5. Header image */
+
+#header {
+  background-image: url(%%cover%%);
+  border-bottom: none;
+  height: 155px;
+  position: relative;
+  background-repeat: no-repeat;
+}
+
+#header-bottom-left .tabmenu {
+  position: absolute;
+  bottom: 0;
+  left: 300px;
+  vertical-align: bottom;
+}
+
+#header-bottom-left .tabmenu li a {
+  background-color: #f0f0f0;
+  color: #00a3dd;
+  padding: 2px 10px 0;
+  -moz-border-radius-topleft: 5px;
+  -moz-border-radius-topright: 5px;
+  background-color: transparent;
+  color: #ececec;
+  padding: 2px 10px 0;
+  font-family: arial, sans-serif;
+  font-size: 1.1em;
+  font-weight: bold;
+  letter-spacing: 1px;
+  border: solid 1px transparent;
+  display: inline-block;
+  padding-bottom: 2px;
+}
+
+#header-bottom-left .tabmenu li a:hover {
+  color: #fff;
+  background: rgba(139, 0, 0, 0.17);
+  padding-top: 4px;
+  border: solid 1px rgba(107, 33, 29, 0.11);
+  /* border-bottom:transparent*/
+}
+
+#header-bottom-left .tabmenu.formtab .selected a,
+.user,
+#userbarToggle,
+#sr-header-area,
+#header-bottom-right a,
+#header-bottom-right,
+.sr-bar a,
+#sr-more-link {
+  /* commented out the background color below so it doesn't show up behind reddit beta icon */
+  /*background-color:#f5f5f5!important;*/
+  color: #00a3dd !important;
+  color: #00a3dd !important;
+}
+
+#header-bottom-left .tabmenu li.selected a {
+  border-color: #777 #777 #00a3dd;
+  padding-top: 4px;
+  border: none;
+  border-top: solid 1px #00a3dd;
+  border-left: solid 1px #00a3dd;
+  border-right: solid 1px #00a3dd;
+  border-bottom: transparent;
+  background-color: rgba(0, 0, 0, 0.17);
+  color: #fff;
+}
+
+#header-bottom-left .tabmenu li.selected a:hover {
+  color: #fff;
+}
+
+#header-bottom-left .tabmenu.formtab a {
+  background-color: #fff !important;
+  color: #00a3dd !important;
+  border: none;
+  padding: 2px 6px 0 !important;
+  font: small verdana, arial, helvetica, sans-serif !important;
+  border: 1px solid #00a3dd !important;
+}
+
+#header-bottom-left .tabmenu.formtab .selected a {
+  font-weight: 700;
+  border: none !important;
+  border-top: 1px solid #454545 !important;
+}
+
+#header {
+  background-color: #fff;
+  border-bottom: 1px solid #777;
+}
+
+.pagename a {
+  color: #fff;
+  font-size: 22px;
+  text-transform: uppercase;
+}
+.pagename {
+  color: #fff;
+  font-size: 18px;
+}
+.pagename a:hover {
+  color: #fff;
+  text-decoration: none !important;
+}
+
+#header-img {
+  vertical-align: bottom;
+  width: 130px;
+  height: 126.5px;
+  margin-bottom: 5px;
+  margin-left: 10px;
+}
+
+#header {
+  background-color: #fff;
+  border-bottom: 1px solid #777;
 }
